--- a/src/pocketmine/resources/pocketmine.yml
+++ b/src/pocketmine/resources/pocketmine.yml
@@ -26,7 +26,7 @@ debug:
 
 level-settings:
  #The default format that levels will use when created
- default-format: mcregion
+ default-format: pmanvil
  #If true, converts from a format that is not the default to the default format on load
  #NOTE: This is currently not implemented
  convert-format: false
