--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,7 @@ before_script:
  - echo "extension=pthreads.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 
 script:
- - composer install --prefer-dist
- - composer install --no-dev --prefer-dist
- - php ./src/pocketmine/Pocketmine.php
+ - php src/pocketmine/Pocketmine.php
 
 cache:
  directories:
