--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
  - echo "extension=pthreads.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 
 script:
- - php ./src/pocketmine/PocketMine.php
+ - php ./src/pocketmine/PocketMine.php --no-wizard
 
 notifications:
  email: true
