--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
 
 script:
  - cd ./tests
- - php ../src/pocketmine/PocketMine.php
+ - php ../src/pocketmine/PocketMine.php --no-wizard
 
 notifications:
  email: true
