--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,6 @@ php:
  - 7.3
 
 before_script:
- - mkdir plugins
- - wget -O plugins/DevTools.phar https://github.com/IceCruelStuff/DevTools/releases/latest/download/DevTools.phar
  - phpenv config-rm xdebug.ini
  - echo | pecl install channel://pecl.php.net/yaml-2.1.0
  - git clone https://github.com/pmmp/pthreads.git
@@ -19,7 +17,11 @@ before_script:
  - echo "extension=pthreads.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 
 script:
- - php tests/TravisTest.php
+ - composer install --prefer-dist
+ - ./vendor/bin/phpstan analyze --no-progress --memory-limit=2G
+ - ./vendor/bin/phpunit --bootstrap vendor/autoload.php --fail-on-warning tests/phpunit
+ - composer install --no-dev --prefer-dist
+ - ./tests/travis.sh -t4
 
 cache:
  directories:
