--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-   "name": "Steadfast5",
+   "name": "Steadfast5/Steadfast5",
    "description": "A server software for Minecraft: Bedrock Edition",
    "type": "project",
    "homepage": "https://steadfast5.tk",
